--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  KPDwyer
 timezone: America/New_York
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-slate
+theme: minima
 plugins:
   - jekyll-feed
 
